# archie_kinematics_mecanum

./: CMakeLists.txt  README.md  package.xml
common/include/: Kinematics.h  MecanumKinematics.h
common/src/: Mecanum4WKinematics.cpp
launch/: test_setup.launch  test_simulation.launch
ros/src/: archie_kinematics_mecanum_node.cpp  archie_kinematics_mecanum_sim_node.cpp
